<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="settings_section_title_general">General</string>
    <string name="settings_option_daily_water_intake">Daily Water Intake</string>
    <string name="settings_option_units">Units</string>
    <string name="settings_section_title_remind_notifications">Remind Notifications</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="settings_option_manage_notifications">Manage Notifications</string>
    <string name="settings_section_title_profile">Profile</string>
    <string name="settings_option_name">Name</string>
    <string name="settings_option_weight">Weight</string>
    <string name="settings_option_theme">Theme</string>
    <string name="settings_option_activity_level">Activity Level</string>
    <string name="settings_option_ambience_temperature">Ambience Temperature</string>
    <string name="settings_option_calculated_intake">Calculated Intake</string>
    <string name="settings_option_theme_auto">Auto</string>
    <string name="settings_option_theme_dark">Dark</string>
    <string name="settings_option_theme_light">Light</string>
    <string name="settings_dialog_daily_water_intake_input">Daily Water Intake Input</string>
    <string name="back">back</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="week_days">Week Days</string>
    <string name="notification_time">Notification Time</string>
    <string name="manage_notifications_add_option">+ Add</string>
    <string name="remove_schedule">Remove schedule</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="select_notification_schedule">Select Notification Schedule</string>
    <string name="activity_level_days">%d day(s)</string>
    <string name="temperature_level_cold">Cold</string>
    <string name="temperature_level_moderate">Moderate</string>
    <string name="temperature_level_warm">Warm</string>
    <string name="temperature_level_hot">Hot</string>
    <string name="activity_level_heavy_title">Heavily Active</string>
    <string name="activity_level_moderate_title">Moderately Active</string>
    <string name="activity_level_light_title">Lightly Active</string>
    <string name="activity_level_sedentary_title">Sedentary</string>
    <string name="permission_necessary">Permission Necessary</string>

    <string name="short_named_unit_celsius">°C</string>
    <string name="short_named_unit_fahrenheit">°F</string>
    <string name="short_named_unit_oz_uk">OZ UK</string>
    <string name="short_named_unit_ml">ml</string>
    <string name="short_named_unit_oz_us">OZ US</string>
    <string name="short_named_unit_kg">kg</string>
    <string name="short_named_unit_lbs">lbs</string>
    <string name="unit_selector_title">Units</string>
    <string name="unit_selector_weight_section">Weight</string>
    <string name="unit_selector_volume_section">Volume</string>
    <string name="unit_selector_temperature_section">Temperature</string>
    <string name="start_at">Start at</string>
    <string name="stop_at">Stop at</string>
    <string name="notify_each">Notify each</string>
    <string name="delete_others">Delete others</string>
    <string name="add_notifications">Add Notifications</string>

    <plurals name="notification_frequency_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="notification_frequency_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="notification_frequency_connective">%s and %s</string>
    <string name="add_notifications_single">Single</string>
    <string name="add_notifications_multiple">Multiple</string>
    <string name="add_notifications_time">Notification Time</string>
    <string name="add_notification">Add notification</string>
    <string name="short_weekday_sunday">S¹</string>
    <string name="short_weekday_monday">M²</string>
    <string name="short_weekday_tuesday">T³</string>
    <string name="short_weekday_wednesday">W⁴</string>
    <string name="short_weekday_thursday">T⁵</string>
    <string name="short_weekday_friday">F⁶</string>
    <string name="short_weekday_saturday">S⁷</string>
    <string name="notification_days_weekend">Weekend</string>
    <string name="notification_days_weekdays">Monday to Friday</string>
    <string name="notification_days_every_day">Every day</string>
    <string name="notification_days_no_days">No notification</string>
    <string name="notification_days_picker_title">Weekdays for %s</string>
    <string name="notification_days_picker_title_standalone">Select notification days</string>
    <string name="notification_days_options">Notification Days</string>
    <string name="more_content_desc">more</string>
    <string name="notification_selection_delete">Delete</string>
    <string name="notification_selection_days">Notification days</string>
    <string name="manage_notification_more_select_all">Select All</string>
    <string name="manage_notifications_warning_no_notifications">No notifications</string>
    <string name="selection_mode_option_all">All</string>
    <string name="selection_mode_option_none">None</string>
    <string name="selection_mode_option_delete">Delete</string>
    <string name="selection_mode_option_days">Days</string>
    <string name="selection_mode_option_cancel">Cancel</string>
    <string name="weight_input">Weight input</string>
    <string name="do_you_want_to_set_the_calculated_intake_as_your_daily_intake">Do you want to set the calculated intake as your daily intake?</string>
    <string name="set_intake">Set intake</string>

</resources>