<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:paddingVertical="16dp"
    app:singleLine="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sundayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_sunday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mondayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_monday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tuesdayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_tuesday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/wednesdayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_wednesday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/thursdayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_thursday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fridayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_friday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/saturdayCard"
        style="@style/WeekdayCard">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/short_weekday_saturday"
            android:textAppearance="?attr/textAppearanceBody1" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>