<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <com.google.android.material.textview.MaterialTextView
        style="@style/SectionTitle"
        android:text="@string/settings_section_title_profile" />

    <LinearLayout style="@style/SettingContainer">

        <LinearLayout
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_name" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Value"
                tools:text="100 ml" />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_weight" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Value"
                tools:text="Metric" />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_activity_level" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Value"
                tools:text="Metric" />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_ambience_temperature" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Value"
                tools:text="Metric" />

        </LinearLayout>

        <LinearLayout
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_expected_intake" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Value"
                tools:text="Metric" />

        </LinearLayout>

    </LinearLayout>

</merge>