<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/SectionTitle"
        android:text="@string/settings_section_title_general" />

    <LinearLayout
        android:id="@+id/llContainer"
        style="@style/SettingContainer">

        <LinearLayout
            android:id="@+id/llDailyIntake"
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_daily_water_intake" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDailyWaterIntakeValue"
                style="@style/SettingContainer.Item.Value"
                tools:text="100 ml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMeasureSystem"
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_units" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMeasureSystemValue"
                style="@style/SettingContainer.Item.Value"
                tools:text="ml, kg, °C" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llThemeColor"
            style="@style/SettingContainer.Item">

            <com.google.android.material.textview.MaterialTextView
                style="@style/SettingContainer.Item.Title"
                android:text="@string/settings_option_theme" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvThemeValue"
                style="@style/SettingContainer.Item.Value"
                tools:text="Dark" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>